restyle to match new website

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
 		<div class="container">
 
 			<a class="navbar-brand" href="/">
-                <img alt="Enclave" src="/img/enclave-header-logo.png">    
+                <img alt="Enclave" src="/img/enclave-logo.png">    
 			</a>
 
 			<div class="navbar-header">
@@ -12,8 +12,8 @@
 
 			<div id="navbar-main" class="navbar-collapse navbar-right collapse">
 				<ul class="nav navbar-nav">
-					<li><a class="btn-login" href="https://portal.enclave.io">Log in</a></li>
-                    <li><a class="btn-download" href="https://portal.enclave.io/account/register">Get Started</a></li>
+					<li><a class="btn-login" target="_blank" href="https://portal.enclave.io">Log in</a></li>
+                    <li><a class="btn-download" target="_blank" href="https://portal.enclave.io/account/register">Get Started</a></li>
 				</ul>
 			</div>
 		</div>
